--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,12 @@ Version: 0.0.0.9000
 Authors@R: person("Quentin", "Geissmann", email = "qgeissmann@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.0)
+Imports:
+    hms,
+    methods,
+    pkgconfig,
+    stringr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
