add  generic method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(as.dhms,character)
 S3method(as.dhms,default)
 S3method(as.dhms,difftime)
 S3method(as.dhms,numeric)
+S3method(c,dhms)
 S3method(format,dhms)
 S3method(print,dhms)
 export(as.dhms)
